# GuiCalc

./: main.py  pyproject.toml
