[tool.poetry]
name = "guitest"
version = "0.1.0"
description = ""
authors = ["egor <kogayegor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyautogui = "^0.9.54"
pyscreeze = "^1.0.1"
pillow = "^11.0.0"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
